--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,14 +7,13 @@ on:
 
 jobs:
   upload-release:
-
     runs-on: ubuntu-22.04
     needs:
     - build-linux
     - build-windows
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
     - name: create release
       id: create_release
       uses: actions/create-release@v1
@@ -26,15 +25,35 @@ jobs:
         draft: false
         prerelease: false
     - name: download artifacts
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         name: uploads
+    - name: upload linux
+      id: upload-linux
+      uses: actions/upload-release-asset@v1.0.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./uploads/app-linux.bin
+        asset_name: ssh-tunnel-manager-linux-${{ github.ref_name }}
+        asset_content_type: application/x-executable
+    - name: upload windows
+      id: upload-windows
+      uses: actions/upload-release-asset@v1.0.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./uploads/app-windows.exe
+        asset_name: ssh-tunnel-manager-windows-${{ github.ref_name }}.exe
+        asset_content_type: application/x-dosexec
 
   build-linux:
     runs-on: ubuntu-22.04
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
       with:
         python-version: 3.11.13
     - name: build executable
@@ -43,7 +62,7 @@ jobs:
         pip install pyinstaller
         pyinstaller --onefile --noconsole --name ssh-client-linux.bin app.py
     - name: upload artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: uploads
         path: dist/ssh-client-linux.bin
@@ -51,8 +70,8 @@ jobs:
   build-windows:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
       with:
         python-version: 3.11.13
     - name: build executable
@@ -61,7 +80,7 @@ jobs:
         pip install pyinstaller
         pyinstaller --onefile --noconsole --name ssh-client-windows.exe app.py
     - name: upload artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: uploads
         path: dist/ssh-client-windows.exe
