--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
     - name: create release
       id: create_release
       uses: actions/create-release@v1
@@ -24,10 +25,19 @@ jobs:
         release_name: Release ${{ github.ref_name }}
         draft: false
         prerelease: false
-    - name: download artifacts
+
+    - name: download linux artifact
       uses: actions/download-artifact@v4
       with:
-        name: uploads
+        name: linux-artifact
+        path: ./uploads
+
+    - name: download windows artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: windows-artifact
+        path: ./uploads
+
     - name: upload linux
       id: upload-linux
       uses: actions/upload-release-asset@v1.0.0
@@ -38,6 +48,7 @@ jobs:
         asset_path: ./uploads/ssh-client-linux.bin
         asset_name: ssh-tunnel-manager-linux-${{ github.ref_name }}
         asset_content_type: application/x-executable
+
     - name: upload windows
       id: upload-windows
       uses: actions/upload-release-asset@v1.0.0
@@ -53,34 +64,40 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
     - uses: actions/checkout@v4
+
     - uses: actions/setup-python@v5
       with:
         python-version: 3.11.13
+
     - name: build executable
       run: |
         pip install -r requirements.txt
         pip install pyinstaller
         pyinstaller --onefile --noconsole --name ssh-client-linux.bin app.py
+
     - name: upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: uploads
+        name: linux-artifact
         path: dist/ssh-client-linux.bin
 
   build-windows:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
+
     - uses: actions/setup-python@v5
       with:
         python-version: 3.11.x
+
     - name: build executable
       run: |
         pip install -r requirements.txt
         pip install pyinstaller
         pyinstaller --onefile --noconsole --name ssh-client-windows.exe app.py
+
     - name: upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: uploads
+        name: windows-artifact
         path: dist/ssh-client-windows.exe
