--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./uploads/ssh-client-linux.bin
-        asset_name: ssh-tunnel-manager-linux-${{ github.ref_name }}
+        asset_name: ssh-client-linux-${{ github.ref_name }}
         asset_content_type: application/x-executable
 
     - name: upload windows
@@ -57,7 +57,7 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./uploads/ssh-client-windows.exe
-        asset_name: ssh-tunnel-manager-windows-${{ github.ref_name }}.exe
+        asset_name: ssh-client-windows-${{ github.ref_name }}.exe
         asset_content_type: application/x-dosexec
 
   build-linux:
